projects page is up and running need to fix wrap layout

--- a/src/index.css
+++ b/src/index.css
@@ -169,3 +169,15 @@ button:focus-visible {
         font-size: 32px; /* Larger size for screens with a minimum width of 768px */
     }
 }
+
+/* Projects Page */
+
+.description {
+  display: none;
+}
+
+/* Show description on hover */
+.p-4:hover .description {
+  display: block;
+}
+
